# OOP_Lab3

./: CMakeLists.txt
include/: figure.h  figure_array.h  octagon.h  point.h  square.h  triangle.h
src/: figure.cpp  figure_array.cpp  main.cpp  octagon.cpp  square.cpp  triangle.cpp
tests/: figure_test.cpp  point_test.cpp  test_figure_array.cpp  test_integration.cpp  test_octagon.cpp  test_square.cpp  test_triangle.cpp
